feat: change ad9528 init config
1. PLL1 ref 单端->差分
2. PLL1 VCC/2 holdover 强制
3. PLL1 减小电荷泵电流

--- a/adi-adrv9371.dtsi
+++ b/adi-adrv9371.dtsi
@@ -279,7 +279,6 @@
 			adi,vcxo-freq = <30720000>;
 #endif
 			adi,refa-enable=<1>;	// rj
-			adi,refa-diff-rcv-enable=<1>;	//rj
 
 #if defined (OSC_122M88)
 			adi,refa-r-div = <66>;
@@ -297,7 +296,8 @@
 			adi,pll1-feedback-div = <16>;
 #endif
 
-			adi,pll1-charge-pump-current-nA = <63500>;
+			adi,pll1-charge-pump-current-nA = <31500>;
+			adi,pll1-charge-pump-forces-holdover;
 
 
 			/* PLL2 config */
