--- a/dts_rau_cpri_ecp.dtsi
+++ b/dts_rau_cpri_ecp.dtsi
@@ -35,23 +35,23 @@
 		interrupts = < 0 ECP3_IRQ_NUM 4 >;
 	};
 
-	gt0@b003d000 {
-		compatible = "generic-uio";
+	cpri_gt0@b003d000 {
+		compatible = "rau,simple-region2";
 		reg = < 0x0 0xB003D000 0x10 >;
 	};
 
-	gt1@b003d010 {
-		compatible = "generic-uio";
+	cpri_gt1@b003d010 {
+		compatible = "rau,simple-region2";
 		reg = < 0x0 0xB003D010 0x10 >;
 	};
 
-	gt2@b003d020 {
-		compatible = "generic-uio";
+	cpri_gt2@b003d020 {
+		compatible = "rau,simple-region2";
 		reg = < 0x0 0xB003D020 0x10 >;
 	};
 
-	gt3@b003d030 {
-		compatible = "generic-uio";
+	cpri_gt3@b003d030 {
+		compatible = "rau,simple-region2";
 		reg = < 0x0 0xB003D030 0x10 >;
 	};
 
