--- a/peripheral.dtsi
+++ b/peripheral.dtsi
@@ -40,7 +40,10 @@
 		compatible = "linux,wdt-gpio";
 		gpios = <&gpio 28 GPIO_ACTIVE_LOW>;
 		hw_algo = "toggle";
-		hw_margin_ms = <400>;
+
+		always-running;
+		hw_margin_ms = <100>;
+
 	};
 
 	gpio_keys{
